@@ -19,7 +19,7 @@ package org.springframework.test.context.junit4.statements;
 import java.lang.annotation.Annotation;
 import java.lang.reflect.Method;
 
-import org.junit.Assume;
+import org.junit.AssumptionViolatedException;
 import org.junit.runners.model.Statement;
 
 import org.springframework.core.annotation.AnnotationUtils;
@@ -76,27 +76,24 @@ public class ProfileValueChecker extends Statement {
 	 * will simply evaluate the next {@link Statement} in the execution chain.
 	 * @see ProfileValueUtils#isTestEnabledInThisEnvironment(Class)
 	 * @see ProfileValueUtils#isTestEnabledInThisEnvironment(Method, Class)
-	 * @see org.junit.Assume
+	 * @throws AssumptionViolatedException if the test is disabled
+	 * @throws Throwable if evaluation of the next statement fails
 	 */
 	@Override
 	public void evaluate() throws Throwable {
 		if (this.testMethod == null) {
 			if (!ProfileValueUtils.isTestEnabledInThisEnvironment(this.testClass)) {
-				// Invoke assumeTrue() with false to avoid direct reference to JUnit's
-				// AssumptionViolatedException which exists in two packages as of JUnit 4.12.
 				Annotation ann = AnnotationUtils.findAnnotation(this.testClass, IfProfileValue.class);
-				Assume.assumeTrue(String.format(
-						"Profile configured via [%s] is not enabled in this environment for test class [%s].",
-						ann, this.testClass.getName()), false);
+				throw new AssumptionViolatedException(
+					String.format("Profile configured via [%s] is not enabled in this environment for test class [%s].",
+						ann, this.testClass.getName()));
 			}
 		}
 		else {
 			if (!ProfileValueUtils.isTestEnabledInThisEnvironment(this.testMethod, this.testClass)) {
-				// Invoke assumeTrue() with false to avoid direct reference to JUnit's
-				// AssumptionViolatedException which exists in two packages as of JUnit 4.12.
-				Assume.assumeTrue(String.format(
-						"Profile configured via @IfProfileValue is not enabled in this environment for test method [%s].",
-						this.testMethod), false);
+				throw new AssumptionViolatedException(String.format(
+					"Profile configured via @IfProfileValue is not enabled in this environment for test method [%s].",
+					this.testMethod));
 			}
 		}
 
